--- a/package.json
+++ b/package.json
@@ -3,12 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.3.0",
+    "@coreui/react": "^5.4.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@iconscout/react-unicons": "^2.0.2",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/material": "^6.1.5",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.21.5",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "framer-motion": "^11.11.10",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.4",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.13",
+    "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +55,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1"
   }
 }
