--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@abp/ng.theme.shared": "^9.0.0",
     "@ant-design/icons": "^5.5.1",
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.3.0",
@@ -12,23 +13,53 @@
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@mui/x-data-grid": "^7.22.1",
+    "@paypal/paypal-js": "^8.1.2",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
+    "@theme-ui/color-modes": "^0.17.1",
     "antd": "^5.21.5",
+    "app-themes": "^1.0.8",
+    "await": "^0.2.6",
     "axios": "^1.7.7",
+    "bearer": "^0.0.20",
     "bootstrap": "^5.3.3",
+    "colors-option": "^6.0.0",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.11.10",
+    "http-proxy-middleware": "^3.0.3",
+    "input": "^1.0.1",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
+    "mdb-react-ui-kit": "^9.0.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.4",
+    "react-bootstrap": "^2.10.5",
+    "react-bootstrap-buttons": "^1.0.0",
+    "react-bootstrap-modal": "^4.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
+    "react-model": "^4.3.1",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.3.2",
+    "react-switch": "^7.0.0",
+    "reactjs-popup": "^2.0.6",
+    "router": "^1.3.8",
     "styled-components": "^6.1.13",
+    "svg-icon": "^0.8.2",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^6.6.1",
+    "theme": "^0.1.0",
+    "theme-colors": "^0.1.0",
     "use-history": "^1.4.1",
     "web-vitals": "^2.1.4"
   },
@@ -58,6 +89,11 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.0.1"
+    "@testing-library/react": "^16.0.1",
+    "assert": "^2.1.0",
+    "react-app-rewired": "^2.2.1",
+    "stream-browserify": "^3.0.0",
+    "tty-browserify": "^0.0.1",
+    "util": "^0.12.5"
   }
 }
