--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@iconscout/react-unicons": "^2.0.2",
+    "@mui/base": "^5.0.0-beta.64",
     "@mui/icons-material": "^6.1.5",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.5",
     "@mui/x-data-grid": "^7.22.1",
     "@paypal/paypal-js": "^8.1.2",
